click here to see recent changes

--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
@@ -13,8 +13,8 @@
             <div class="container">
                 {% block nav %}
                     <a href="{% url 'index' %}">Stays</a>
-                    <a>Hotels</a>
-                    <a>Locations</a>
+                    <a href="{% url 'hotels' %}">Hotels</a>
+                    <a href="{% url 'locations' %}">Locations</a>
                     <span class="spacer"></span>
                 {% endblock nav %}
             </div>
