--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Looking2Stay {% endblock title %}</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'lookingtostay/favicon/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'lookingtostay/css/base.css' %}">
 </head>
 <body>
