--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotels.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotels.html
@@ -1,17 +1,45 @@
 {% extends 'lookingtostay/base.html' %}
 {% block title %} List Of Hotels - {{ block.super }}{% endblock title %}
 {% block content%}
-    <h2> Properties to stay in </h2>
-    <div id="myBtnContainer">
-        <button class="btn active" onclick="filterSelection('all')">Show all</button>
-        <button class="btn" onclick="filterSelection('hotels')">Hotels</button>
-        <button class="btn" onclick="filterSelection('apartments')">Apartments</button>
-        <button class="btn" onclick="filterSelection('villas')">Villas</button>
-        <button class="btn" onclick="filterSelection('cabins')">Cabins</button>
-        <button class="btn" onclick="filterSelection('homes')">Homes</button>
-    </div>
+<h1> Properties to stay in </h1>
+{% comment %} <h1> Properties to stay in </h1>
+<div id="myBtnContainer">
+    <button class="btn active" onclick="filterSelection('all')">Show all</button>
+    <button class="btn" onclick="filterSelection('hotels')">Hotels</button>
+    <button class="btn" onclick="filterSelection('apartments')">Apartments</button>
+    <button class="btn" onclick="filterSelection('villas')">Villas</button>
+    <button class="btn" onclick="filterSelection('cabins')">Cabins</button>
+    <button class="btn" onclick="filterSelection('homes')">Homes</button>
+</div>
 
+<script>
+    var btnContainer = document.getElementById("myBtnContainer");
+    var btns = btnContainer.getElementsByClassName("btn");
+    for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function(){
+        var current = document.getElementsByClassName("active");
+        current[0].className = current[0].className.replace(" active", "");
+        this.className += " active";
+    });
+    }
+</script>
+<div> {% endcomment %}
 
+<ul class="hotels">
+    {% for hotel in hotels %}
+        {% comment %} <li class="hotel">
+            <a href="{% url 'hotel' hotel.pk %}">
+                {% if hotel.pic %}
+                    <img src="{{ book.pic.url }}">
+                {% else %}
+                    <img src="{% static 'lookingtostay/img/hotel.png' %}">
+                {% endif %} {% endcomment %}
+                <h3>{{ hotel.hotel_name}}</h3>
+            </a>
+            <p>Located in {{ hotel.city }}</p>
+        </li>
+    {% endfor %}
+</ul>
 
 
 {% endblock content%}
