--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/locations.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/locations.html
@@ -1,4 +1,5 @@
 {% extends 'lookingtostay/base.html' %}
+{% load static %}
 {% block title %} List Of Locations - {{ block.super }}{% endblock title %}
 {% block content%}
 
