click here to see recent changes

--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title %}{{ object }}{% endblock title %}
 {% block content%}
-<h1>{{ object.title }}</h1>
+<h1>{{ object.hotel_name }}</h1>
 <h3>Located in {{ object.location }}</h3>
 <p>Description<br>
     {{ hotel.description }}
