--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ object }}{% endblock title %}
 {% block content%}
 <h1>{{ object.hotel_name }}</h1>
-<h3>Located in {{ object.location }}</h3>
+<h3>&#128204; {{ object.city }}</h3>
 <p>Description<br>
     {{ hotel.description }}
 </p>
