--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
@@ -13,6 +14,7 @@
         <div class="banner-img">
             <div class="container">
                 {% block nav %}
+                    <img class="logo" src="{% static 'lookingtostay/img/lookingtostaylogo.png' %}"">
                     <a href="{% url 'index' %}">Stays</a>
                     <a href="{% url 'hotels' %}">Hotels</a>
                     <a href="{% url 'locations' %}">Locations</a>
