--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotels.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotels.html
@@ -2,32 +2,34 @@
 {% load static %}
 {% block title %} List Of Hotels - {{ block.super }}{% endblock title %}
 {% block content%}
-<h1> Properties list </h1>
-<div class="category_filter">
-    <h3>Categories</h3>
-    <ul>
+<h1 class="hotelheader">Categories</h1>
+<div>
+    <ul class="cat">
         {% for filter_category in categories %}
-            <li class="{% if filter_category == category %}current{% endif %}">{{ filter_category.link_filtered_hotels }}</li>
+        <li class="{% if filter_category == category %}current{% endif %}">{{ filter_category.link_filtered_hotels }}</li>
         {% endfor %}
     </ul>
-    <form class='searchmethod' action="{% url 'hotels' %}" method="get">
+    {% comment %} <form class='searchmethod' action="{% url 'hotels' %}" method="get">
         <input type="text" name="search", value="{{ request.GET.search }}">
         <button type="submit">Search</button>
-    </form>
+    </form> {% endcomment %}
 </div>
+<h1 class="hotelheader"> Property list </h1>
 <ul class="hotel_list">
-    {% for hotel in hotels %}
+    {% for hotel in hotel_list %}
         <li class="hotel">
-            {% comment %} <a href="{% url 'hotel' hotel.pk %}"> {% endcomment %}
+            <a href="{% url 'hotel' hotel.pk %}">
                 {% if hotel.cover_photo %}
                     <img src="{{ hotel.cover_photo.url }}">
                 {% else %}
                     <img src="{% static 'lookingtostay/img/hotel.jpg' %}">
                 {% endif %}
-                <p><b>{{ hotel.hotel_name}}</b><p>
-            </a>
-            <p>&#128204; {{ hotel.city }}</p>
-            <h5><i>From </i>{{ hotel.price_from }} {{ hotel.type_currency }}<i> per night </i></h5>
+                <div class="center lower">
+                <p><b>{{ hotel.hotel_name}}</b></p>
+                    </a>
+                    <p>&#128204; {{ hotel.city }}</p>
+                    <h5><i>From </i><br>{{ hotel.price_from }} {{ hotel.type_currency }}<br><i> per night </i></h5>
+                </div>
         </li>
     {% endfor %}
 </ul>
