--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -4,12 +4,11 @@
 {% block content%}
 <h1>{{ object.hotel_name }}</h1>
 <div>
-    <h3>&#128204; {{ object.city }}</h3>
+    <h3>&#128204;{{ object.address }} {{ object.city }}</h3>
     <h5><i>From </i>{{ hotel.price_from }} {{ hotel.type_currency }}<i> per night </i></h5>
 </div>
-<p>Description<br>
-    {{ hotel.description }}
-</p>
+<h4>Description</h4>
+<p>{{ hotel.description }}</p>
 
 
 {% endblock content%}
