click here to see recent changes

--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
@@ -8,6 +8,7 @@
     <title>{% block title %} Looking2Stay {% endblock title %}</title>
     <link rel="icon" type="image/x-icon" href="{% static 'lookingtostay/img/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'lookingtostay/css/base.css' %}">
+    {% comment %} <link rel="stylesheet" href="{% static 'lookingtostay/css/hotel_detail.css' %}"> {% endcomment %}
 </head>
 <body>
     <header>
