--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -1,12 +1,13 @@
 {% extends 'lookingtostay/base.html' %}
 {% load static %}
-{% block title %}{{ object }}{% endblock title %}
+{% block title %}{{ object }} - {{ block.super }}{% endblock title %}
 {% block content%}
-
-<h1>{{ object.hotel_name }}</h1>
-<div>
-    <h3>&#128204;{{ object.address }} {{ object.city }}</h3>
-    <h5><i>From </i>{{ hotel.price_from }} {{ hotel.type_currency }}<i> per night </i></h5>
+<div class="sidegap">
+    <h1>{{ object.hotel_name }}</h1>
+    <div class="toppage">
+        <h3>&#128204;{{ object.address }} {{ object.city }}</h3>
+        <h5><i>From </i>{{ hotel.price_from }} {{ hotel.type_currency }}<i> per night </i></h5>
+    </div>
 </div>
 <style>
     .one {
@@ -40,8 +41,33 @@
         width:  calc(var(--s)*var(--f));
         height: calc(var(--s)*var(--f));
       }
+
+      .amenity li {
+        list-style: none;
+        white-space: nowrap;
+        border: 1px solid black;
+        padding: 1rem;
+        margin: 0 -15px;
+        flex-wrap: wrap;
+    }
+    
+    .amenity {
+        display: flex;
+        justify-content: center;
+        list-style-type: none;
+      }
+
+      {% comment %} h1 {
+        font-size: 50px;
+        text-align: center;
+      } {% endcomment %}
+
+    .sidegap {
+        margin: 2rem;
+    }
+
 </style>
-<div class="grid one">
+<div class="grid one center">
     <div class="gallery">
         <img src="{{ object.hotel_images.hotel_img1.url }}">
     </div>
@@ -61,12 +87,16 @@
         <img src="{{ object.hotel_images.hotel_img6.url }}">
     </div>
   </div>
-<h4>Description</h4>
-<p>{{ hotel.description }}</p>
-<h4>Amenities</h4>
-<ul class="amenity_list">
-    {% for amenity in Amenities %}
-    <li class="amenity">
+  <div class="amenity center">
+    {% for amenity in object.amenities.all %}
+    <ul class="amenities">
+        <li>{{ amenity }}</li>
+    </ul>
     {% endfor %}
-</ul>
+</div>
+<div class="sidegap">
+    <h4>Description</h4>
+    <p>{{ hotel.description }}</p>
+</div>
+{% comment %} {{ object.amenities }} {% endcomment %}
 {% endblock content%}
