click here to see recent changes

--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/hotel_detail.html
@@ -45,10 +45,14 @@
       .amenity li {
         list-style: none;
         white-space: nowrap;
-        border: 1px solid black;
         padding: 1rem;
         margin: 0 -15px;
         flex-wrap: wrap;
+        background-color: rgb(195, 158, 94);
+    }
+
+    .amenity li:hover {
+        background-color: rgb(197, 149, 67);
     }
     
     .amenity {
