click here to see recent changes

--- a/looking_to_stay/static/lookingtostay/css/base.css
+++ b/looking_to_stay/static/lookingtostay/css/base.css
@@ -163,3 +163,7 @@ ul.cat {
 .paginator a:hover {
     background-color:rgb(203, 161, 89);
 }
+
+/* body.user_pages {
+    font-family: 'Ariel';
+} */
