--- a/looking_to_stay/user_profile/static/lookingtostay/css/user_base.css
+++ b/looking_to_stay/user_profile/static/lookingtostay/css/user_base.css
@@ -5,7 +5,7 @@ body {
 }
 
 form{
-    height: 520px;
+    height: 400px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
@@ -22,7 +22,7 @@ form{
 form h3{
     font-size: 32px;
     font-weight: 500;
-    line-height: 42px;
+    line-height: 0;
     text-align: center;
     color: rgb(70, 39, 0);
 }
@@ -37,7 +37,7 @@ label{
 
 input{
     display: block;
-    height: 50px;
+    height: 35px;
     width: 100%;
     background-color: rgba(255,255,255,0.07);
     border: 2px solid rgb(70, 39, 0);
@@ -49,11 +49,12 @@ input{
 }
 
 .button{
-    margin-top: 50px;
-    width: 100%;
+    margin-top: 40px;
+    margin-left: 25%;
+    width: 50%;
     background-color: rgb(217, 183, 124);
     color: rgb(70, 39, 0);
-    padding: 15px 0;
+    padding: 5px 0;
     font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
@@ -72,4 +73,80 @@ p a {
 
 p a:hover {
     color: black;
+}
+
+form.register {
+    height: 540px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+
+button{
+    margin-top: 40px;
+    margin-left: 25%;
+    width: 50%;
+    background-color: rgb(217, 183, 124);
+    color: rgb(70, 39, 0);
+    padding: 5px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: rgb(171, 128, 54);
+}
+
+p.registration {
+    text-align: center;
+}
+
+form.reset {
+    height: 300px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+
+form.passwordreset {
+    height: 480px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 50px 35px;
+}
+
+p.reset {
+    margin-top: 5rem;
+    text-align: center;
+}
+
+button a {
+    text-decoration: none;
+    color: rgb(70, 39, 0);
 }
