--- a/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
+++ b/looking_to_stay/looking_to_stay_app/static/lookingtostay/css/hotel_detail.css
@@ -38,11 +38,11 @@
     border: 2px solid rgba(255,255,255,0.1);
     border-radius: 10px;
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    background-color: rgba(255,255,255,0.13);
+    background-color: rgba(251, 231, 202, 0.815);
 }
 
 .amenity li:hover {
-    background-color: rgb(197, 149, 67);
+    background-color: rgba(203, 161, 89, 0.5);
 }
 
 .amenity {
@@ -53,4 +53,13 @@
 
 .sidegap {
     margin: 2rem;
+}
+
+.description {
+  background-color: rgba(251, 231, 202, 0.815);;
+  padding: 1rem;
+  color: rgb(70, 39, 0);
+  border: 2px solid rgba(255,255,255,0.1);
+  border-radius: 10px;
+  box-shadow: 0 0 40px rgba(8,7,16,0.6);
 }
