--- a/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
+++ b/looking_to_stay/looking_to_stay_app/templates/lookingtostay/base.html
@@ -18,10 +18,11 @@
                 <a href="{% url 'index' %}"><img class="logo" src="{% static 'lookingtostay/img/ltos.png' %}"></a>
                     {% comment %} <a href="{% url 'index' %}">Stays</a> {% endcomment %}
                     <a href="{% url 'hotels' %}">Properties</a>
-                    <a href="{% url 'locations' %}">Locations</a>
+                    <a href="{% url 'locations' %}">About Us</a>
                     <span class="spacer"></span>
                     {% if user.is_authenticated %}
                         {% comment %} <a href="{% url 'profile' %}>{{ user }}"</a> {% endcomment %}
+                        <a href="{% url 'profile' %}">Profile</a>
                         {% if user.is_superuser or user.is_staff %}
                             <a href="{% url 'admin:index' %}">Admin</a>
                         {% endif %}
